<resources>
    <string name="app_name">MapDemo</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="API_KEY">AIzaSyBnze-wdUC7WYwvyT1qXT4LbulUUz59HQc</string>
    <string name="txtMapType">Map type</string>
    <string name="cd_close">close</string>
    <string name="txt_default">Default</string>
    <string name="txt_satellite">Satellite</string>
    <string name="txt_terrain">Terrain</string>
    <string name="txtMapDetails">Map details</string>
    <string name="txt_traffic">Traffic</string>
    <string name="txtLayer">Layer</string>
    <string name="txtDroppedPin">Dropped pin</string>
    <string name="txt_no_gps_title">To continue, turn on device location, which uses Google\'s location service</string>
    <string name="txt_ok">OK</string>
    <string name="txt_no_thanks">No thanks</string>
    <string name="txt_loading">Loading.. Please Wait.</string>
</resources>